# perceptkit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DATA.md  LICENSE-APACHE  LICENSE-MIT  NAMING.md  README.md  SECURITY.md  STRATEGY.md  deny.toml  plan.md  pyproject.toml  real_bench.jsonl
.cargo/: config.toml
.githooks/: commit-msg
.github/workflows/: ci.yml  release.yml
benchmark_audio/: labels.csv
crates/perceptkit-audio/: Cargo.toml
crates/perceptkit-audio/src/: descriptors.rs  extractor.rs  lib.rs  provider.rs
crates/perceptkit-audio/src/extractors/: energy.rs  mod.rs  silero.rs  speaker.rs  spectral.rs  vad.rs
crates/perceptkit-audio/tests/: silero_e2e.rs
crates/perceptkit-cli/: Cargo.toml
crates/perceptkit-cli/src/: eval.rs  main.rs  reflect.rs  replay.rs  review.rs  synth.rs
crates/perceptkit-core/: Cargo.toml
crates/perceptkit-core/benches/: evaluate_bench.rs
crates/perceptkit-core/src/: engine.rs  error.rs  feature.rs  gate.rs  lib.rs  queue.rs  registry.rs  scene.rs  signal.rs  trace.rs  transition.rs
crates/perceptkit-core/src/dsl/: loader.rs  mod.rs  schema.rs
crates/perceptkit-core/src/matcher/: arbiter.rs  mod.rs  rule.rs
crates/perceptkit-core/src/reflector/: local.rs  mock.rs  mod.rs  noop.rs
crates/perceptkit-core/tests/: local_reflector_e2e.rs
crates/perceptkit-py/: Cargo.toml
crates/perceptkit-py/src/: lib.rs
docs/: blog-1-benchmark.md  blog-2-langchain.md  real-accuracy-results.md  real-accuracy.md  v0.2-design-inputs.md  voxsign-integration.md
examples/: basic_python.py  basic_rust.rs
python/perceptkit/: __init__.py  _perceptkit.pyi
python/tests/: test_smoke.py
scenes/: coding.yaml  driving.yaml  multi_speaker_chat.yaml  music_playback.yaml  near_silence.yaml  office_quiet.yaml  online_meeting.yaml  outdoor_noisy.yaml  sustained_speech.yaml
scripts/: bench_from_audio_dir.py  esc50_to_labels.py  fetch_esc50.sh
