[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "perceptkit"
version = "0.1.0.dev1"
description = "AI Agent Context Layer — perception middleware for voice agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT OR Apache-2.0" }
authors = [
    { name = "smithpeter", email = "zouyongming@gmail.com" }
]
keywords = ["ai", "agent", "perception", "scene", "middleware", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "maturin>=1.7",
]

[project.urls]
Repository = "https://github.com/smithpeter/perceptkit"
Issues = "https://github.com/smithpeter/perceptkit/issues"
Strategy = "https://github.com/smithpeter/perceptkit/blob/main/STRATEGY.md"

[tool.maturin]
manifest-path = "crates/perceptkit-py/Cargo.toml"
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "perceptkit._perceptkit"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
