[package]
name = "perceptkit-audio"
description = "Audio provider and feature extractors for perceptkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"

[dependencies]
perceptkit-core = { path = "../perceptkit-core", version = "0.1.0-dev.1" }
ndarray = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Optional: Silero VAD extractor via tract-onnx (pure Rust ONNX runtime).
# Feature-gated to keep the default build light. When enabled, the caller
# provides the Silero VAD ONNX model at runtime (not bundled in the crate).
tract-onnx = { version = "0.22", optional = true }

[features]
default = []
# Enable SileroVadExtractor. Requires the Silero VAD ONNX model
# (~2.2 MB) at a path you configure at runtime.
silero-vad = ["dep:tract-onnx"]

[dev-dependencies]
proptest = { workspace = true }
