[package]
name = "perceptkit-audio"
description = "Audio provider and feature extractors for perceptkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"

[dependencies]
perceptkit-core = { path = "../perceptkit-core", version = "0.1.0-dev.1" }
ndarray = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rustfft = "6"

# Silero VAD via `rten` (Robert Knight's pure-Rust ML runtime).
# After tract-onnx and ort failed (see commit 14e795f), rten worked:
# robertknight/rten ships a working Silero example, requires .rten format
# (converted from .onnx via `pip install rten-convert`).
rten = { version = "0.24", optional = true, default-features = false, features = ["all-ops", "mmap", "rten_format"] }
rten-tensor = { version = "0.24", optional = true }

[features]
default = []
# Enable SileroVadExtractor (rten backend). Requires the Silero VAD
# model converted to .rten format. Conversion (one-time):
#   pip install rten-convert
#   rten-convert silero_vad.onnx silero_vad.rten
silero-vad = ["dep:rten", "dep:rten-tensor"]

[dev-dependencies]
proptest = { workspace = true }
