[package]
name = "perceptkit-core"
description = "Core traits and DSL for perceptkit — AI Agent Context Layer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"

[dependencies]
serde = { workspace = true }
serde_yml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true }
strsim = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
tokio = { version = "1", features = ["macros", "rt"] }
