[package]
name = "perceptkit-core"
description = "Core traits and DSL for perceptkit — AI Agent Context Layer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"

[dependencies]
serde = { workspace = true }
serde_yml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true }
strsim = { workspace = true }

# Optional: LocalReflector (Qwen-0.5B via llama.cpp). Feature-gated to keep
# core build lightweight. Enable with `--features local-reflector`.
llama-cpp-2 = { version = "0.1", optional = true, default-features = false, features = ["metal"] }

[features]
default = []
# Enable LocalReflector with llama.cpp backend (Metal on macOS).
# Requires a GGUF model file at a path you configure at runtime.
local-reflector = ["dep:llama-cpp-2"]

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
tokio = { version = "1", features = ["macros", "rt"] }

[[bench]]
name = "evaluate_bench"
harness = false

[[example]]
name = "basic_rust"
path = "../../examples/basic_rust.rs"
